--- a/content/post/housing-price-predictions/index.Rmd
+++ b/content/post/housing-price-predictions/index.Rmd
@@ -17,8 +17,8 @@ image:
 projects: []
 ---
 
-```{r setup, include=FALSE, warning=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r include = FALSE}
+knitr::opts_chunk$set(echo=TRUE, message=FALSE, warning=FALSE)
 
 library(tidyverse)
 library(tidymodels)
@@ -26,6 +26,8 @@ library(AmesHousing)
 library(leaflet)
 theme_set(theme_light())
 ```
+
+## This post is a work in progress
 
 In this post, we will explore the Ames housing dataset and use it to create a model for price prediction. The dataset, available  in the `AmesHousing` package, contains 81 features for 3000 home sales between 2006-2010. It is a clean version of the dataset, so no cleaning is needed. However, we will need to do some data engineering later on.  
 
@@ -103,128 +105,62 @@ ames_random_samp %>% group_by(neighborhood) %>% leaflet(data = .,
 
 ```
 
-Now that we have a better feel for our data, let's prepare it for our machine learning workflow. The first thing we want to do it split it into a training and test set. As well, we will use `vfold_cv()` to resample the training set.
+Now that we have a better feel for the data, let's split it into a training and test set using the `rsample` package. We will also use `vfold_cv()` to resample the training set. By default `vfold_cv` will split the data into 10 folds (v) where each fold is split into a training and test set. 
 
 ```{r}
+library(recipes)
+
 set.seed(518)
-ames_split <- initial_split(ames_df, strata = "sale_price")
+ames_split <- initial_split(ames_df, prop = 0.8, strata = "sale_price") 
 
 ames_train <- training(ames_split)
 ames_test <- testing(ames_split)
-
-resamps <- vfold_cv(ames_train, strata = "sale_price")
 ```
 
-Data engineering with recipes package, provides an arsenal of data transformations that may be necessary and/or beneficial to the predictive power of our trained machine learning model. 
+Data engineering with the `recipes` package, provides an arsenal of data transformations that may be necessary and/or beneficial to the predictive power of our trained machine learning model. 
 
 ```{r}
-ames_rec <-
+library(recipes) #loaded with the tidymodels package
+
+ames_rec <- 
   recipe(sale_price ~ ., data = ames_train) %>%
-  step_log(sale_price, base = 10) %>%
-  step_YeoJohnson(lot_area, gr_liv_area) %>%
-  step_other(neighborhood, threshold = .1)  %>%
-  step_dummy(all_nominal()) %>%
-  step_zv(all_predictors()) %>%
-  step_ns(longitude, deg_free = tune("lon")) %>%
-  step_ns(latitude, deg_free = tune("lat"))
+  step_log(sale_price, base = 10) %>% 
+  step_other(neighborhood, threshold = 0.01) %>% 
+  step_dummy(all_nominal()) 
 
-# ames_rec <- 
-#   recipe(Sale_Price ~ Neighborhood + Gr_Liv_Area + Year_Built + Bldg_Type + 
-#            Latitude + Longitude, data = ames_train) %>%
-#   step_log(Gr_Liv_Area, base = 10) %>% 
-#   step_other(Neighborhood, threshold = 0.01) %>% 
-#   step_dummy(all_nominal_predictors()) %>% 
-#   step_interact( ~ Gr_Liv_Area:starts_with("Bldg_Type_") ) %>% 
-#   step_ns(Latitude, Longitude, deg_free = 20)
+ames_lm <- linear_reg() %>% 
+  set_engine("lm") %>% 
+  set_mode("regression")
 
-# tidy_rec <- recipe(Sale_Price~., data = tidy_train) %>% 
-#   step_nzv(all_predictors()) %>% 
-#   step_corr(all_numeric(), -all_outcomes()) %>% 
-#   step_lincomb(all_numeric(), -all_outcomes()) %>% 
-#   step_normalize(all_numeric(), -all_outcomes()) %>% 
-#   step_dummy(all_nominal()) 
-# 
-# spline_rec <- recipe(Sale_Price~., data = tidy_train) %>% 
-#   step_nzv(all_predictors()) %>% 
-#   step_corr(all_numeric(), -all_outcomes()) %>% 
-#   step_lincomb(all_numeric(), -all_outcomes()) %>% 
-#   step_rm(all_nominal()) %>% 
-#   step_bs(all_predictors()) %>% 
-#   step_YeoJohnson(all_predictors())
+lm_wkfl <- 
+  workflow() %>% 
+  add_model(ames_lm) %>% 
+  add_recipe(ames_rec)
 
-# pca_rec <- recipe(Sale_Price~., data = tidy_train) %>% 
-#   step_nzv(all_predictors()) %>% 
-#   step_corr(all_numeric(), -all_outcomes()) %>% 
-#   step_lincomb(all_numeric(), -all_outcomes()) %>% 
-#   step_other(all_nominal()) %>% 
-#   step_normalize(all_numeric(), -all_outcomes()) %>% 
-#   step_dummy(all_nominal()) %>% 
-#   step_pca(all_predictors(), num_comp = 5)
+ames_wkfl_fit <- lm_wkfl %>%
+  last_fit(split = ames_split)
+
+ames_wkfl_fit %>%
+  collect_metrics()
+
+ames_preds <- ames_wkfl_fit %>%
+  collect_predictions()
+
+# ames_test_rec <- ames_rec %>%
+#   prep() %>% 
+#   bake(new_data = ames_test) 
+#   
+# ames_results <- ames_test_rec %>% 
+#   select(sale_price) %>% 
+#   bind_cols(ames_preds)
+
+ggplot(ames_preds, aes(x = sale_price, y = .pred)) +
+  geom_point() +
+  geom_abline(color = 'blue', linetype = 2) +
+  coord_obs_pred() +
+  labs(title = 'R-Squared Plot',
+       y = 'Predicted Sale Price (log)',
+       x = 'Actual Sale Price (log)')
 ```
 
-```{r}
-# knn_model <-
-#   nearest_neighbor(
-#     mode = "regression",
-#     neighbors = tune("K"),
-#     weight_func = tune(),
-#     dist_power = tune()
-#   ) %>%
-#   set_engine("kknn")
-# 
-# pca_regression_model <- linear_reg() %>% 
-#   set_mode("regression") %>% 
-#   set_engine("lm")
-# 
-# spline_model <- linear_reg() %>% 
-#   set_mode("regression") %>% 
-#   set_engine("lm")
-# 
-# randomForest_model <- rand_forest(min_n = tune(), trees = tune()) %>% 
-#   set_mode("regression") %>% 
-#   set_engine("randomForest")
-# 
-# xgboost_model <- boost_tree(learn_rate = tune(), trees = tune(), tree_depth = tune()) %>% 
-#   set_mode("regression") %>% 
-#   set_engine("xgboost")
-
-
-```
-
-
-```{r}
-# ames_wflow <-
-#   workflow() %>%
-#   add_recipe(ames_rec) %>%
-#   add_model(knn_model)
-# 
-# ames_set <-
-#   parameters(ames_wflow) %>%
-#   update(K = neighbors(c(1, 50)))
-
-```
-
-```{r}
-# set.seed(518)
-# 
-# ames_grid <-
-#   ames_set %>%
-#   grid_max_entropy(size = 10)
-# 
-# ames_grid_search <-
-#   tune_grid(
-#     ames_wflow,
-#     resamples = rs_splits,
-#     grid = ames_grid
-#   )
-# 
-# ames_iter_search <-
-#   tune_bayes(
-#     ames_wflow,
-#     resamples = rs_splits,
-#     param_info = ames_set,
-#     initial = ames_grid_search,
-#     iter = 15
-#   )
-```
 
